<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Sphero Drive</string>
	<string name="lost_control">The robot has lost control.</string>
	<string name="drive_setup_progress_title">Prepare</string>
	<string name="drive_setup_progress_message">Preparing robot.</string>
	<string name="drive_failed_to_setup">Failed to setup</string>
	<string name="sensitivity_button_tag">sensitivity_button</string>
	<string name="sensitivity_text_tag">sensitivity_text</string>
    <string name="sensitivity">sensitivity</string>
    <string name="sign_up_text">Sign up for Orbotix news</string>
    <string name="sign_me_up_text">SIGN ME UP</string>
    <string name="name_hint">first and last name</string>
    <string name="email_hint">email address</string>
    <string name="orbotix_copyright">©2011 Orbotix, Inc.</string>
    <string name="software_version_text">Software Version: </string>
    <string name="firmware_version_text">Firmware Version: </string>
    <string name="no_sphero_connected">No Sphero Connected</string>
    <string name="no_software_found">Not exactly sure</string>
    <string name="current_name_text">Current Name:</string>
    <string name="new_name_text">New Name:</string>
    <string name="name_text">name</string>
    <string name="joystick">JOYSTICK</string>
    <string name="tilt">TILT</string>
    <string name="rc">RC</string>
    <string name="Color">Color</string>
    <string name="Sensitivity">Sensitivity</string>
    <string name="Leaderboards">Leaderboards</string>
    <string name="TUTORIAL">AIM TUTORIAL</string>
    <string name="SLEEP">SLEEP</string>
    <string name="ROLL">ROLL</string>
    <string name="SETTINGS">SETTINGS</string>
    <string name="Settings">Settings</string>
    <string name="SPHEROWORLD">SPHERO WORLD</string>
    <string name="INFO">INFO</string>
    <string name="CAUTIOUS">CAUTIOUS</string>
    <string name="COMFORTABLE">COMFORT</string>
    <string name="CRAZY">CRAZY</string>
    <string name="SoundText">SOUND EFFECTS VOLUME</string>
    <string name="HeadingText">HEADING AUTO ADJUST</string>
    <string name="options">options</string>
    <string name="Reset">Reset</string>
    <string name="Done">Done</string>
    <string name="BoostVelocity">Boost Velocity</string>
    <string name="ChangeColor">Change Color</string>
    <string name="ChangeSpeed">Change Speed</string>
    <string name="ChangeDriveStyle">Change Drive Style</string>
    <string name="RobotDisconnected">Lost Connection to Sphero</string>
    <string name="ConnectionLost">The connection with Sphero has been lost. Restart the app to connect to Sphero again.</string>
    <string name="OK">OK</string>
    <string name="Next">Next</string>
    <string name="Place">Place two fingers on those white dots.</string>
    <string name="Spin">Spin your fingers.</string>
    <string name="Aim">Aim! Sphero\'s blue dot at you.</string>
    <string name="Test">Test</string>
    <string name="GotIt">Got It!</string>
    <string name="PlaceSphero">Place Sphero on the floor.</string>
    <string name="Remember">Remember!\nYou can aim Sphero at any time.</string>
    <string name="DontShow">Don\'t show me again</string>
    <string name="StraightAhead">Did Sphero go straight ahead?</string>
    <string name="TailLight">Sphero has a tail light.\n\nSee the blue light?</string>
    <string name="UserGuide">USER GUIDE</string>
</resources>
