<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:padding="4dip">
    <ImageButton android:id="@+id/DriveButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/button_joystick"
                 android:layout_marginTop="2dip"
                 android:padding="2dip"
                 android:layout_gravity="center_horizontal"
                 android:background="@null"
                 android:onClick="onDriveModeSelected"/>
    <TextView android:id="@+id/DriveText"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/joystick"
              android:textSize="12sp"
              android:textColor="@android:color/white"
              android:layout_marginBottom="2dip"
              android:layout_gravity="center_horizontal"/>
    <ImageButton android:id="@+id/TiltButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/button_tilt"
                 android:layout_marginTop="2dip"
                 android:layout_gravity="center_horizontal"
                 android:background="@null"
                 android:padding="2dip"
                 android:onClick="onDriveModeSelected"/>
    <TextView android:id="@+id/TiltText"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/tilt"
              android:textColor="@android:color/white"
              android:textSize="12sp"
              android:layout_marginBottom="2dip"
              android:layout_gravity="center_horizontal"/>
    <ImageButton android:id="@+id/RCButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/button_rc"
                 android:layout_marginTop="2dip"
                 android:layout_gravity="center_horizontal"
                 android:background="@null"
                 android:padding="2dip"
                 android:onClick="onDriveModeSelected"/>
    <TextView android:id="@+id/RCText"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/rc"
              android:textColor="@android:color/white"
              android:textSize="12sp"
              android:layout_marginBottom="2dip"
              android:layout_gravity="center_horizontal"/>
</LinearLayout>