<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:padding="4dip">
    <ImageButton android:id="@+id/CautiousButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/button_popover_cautious"
                 android:layout_marginTop="2dip"
                 android:padding="2dip"
                 android:layout_gravity="center_horizontal"
                 android:background="@null"
                 android:onClick="onSensitivityChanged"/>
    <TextView android:id="@+id/CautiousText"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/CAUTIOUS"
              android:textSize="12sp"
              android:maxWidth="50dip"
              android:ellipsize="marquee"
              android:marqueeRepeatLimit="1"
              android:focusableInTouchMode="true"
              android:singleLine="true"
              android:focusable="true"
              android:textColor="@android:color/white"
              android:layout_marginBottom="2dip"
              android:layout_gravity="center_horizontal"/>
    <ImageButton android:id="@+id/ComfortableButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/button_popover_comfortable"
                 android:layout_marginTop="2dip"
                 android:layout_gravity="center_horizontal"
                 android:background="@null"
                 android:padding="2dip"
                 android:onClick="onSensitivityChanged"/>
    <TextView android:id="@+id/ComfortableText"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/COMFORTABLE"
              android:textColor="@android:color/white"
              android:textSize="12sp"
              android:maxWidth="50dip"
              android:ellipsize="marquee"
              android:marqueeRepeatLimit="1"
              android:focusableInTouchMode="true"
              android:singleLine="true"
              android:focusable="true"
              android:layout_marginBottom="2dip"
              android:layout_gravity="center_horizontal"/>
    <ImageButton android:id="@+id/CrazyButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/button_popover_crazy"
                 android:layout_marginTop="2dip"
                 android:layout_gravity="center_horizontal"
                 android:background="@null"
                 android:padding="2dip"
                 android:onClick="onSensitivityChanged"/>
    <TextView android:id="@+id/CrazyText"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/CRAZY"
              android:textColor="@android:color/white"
              android:textSize="12sp"
              android:maxWidth="50dip"
              android:ellipsize="marquee"
              android:freezesText="false"
              android:marqueeRepeatLimit="1"
              android:focusableInTouchMode="true"
              android:focusable="true"
              android:singleLine="true"
              android:layout_marginBottom="2dip"
              android:layout_gravity="center_horizontal"/>
</LinearLayout>