<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="match_parent"
        android:background="@drawable/menu_bg">
	<ImageView android:id="@+id/TitleImageView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="@drawable/dialog_icon"
		android:layout_marginLeft="40dip"
		android:layout_marginTop="20dip"/>
	<TextView android:id="@+id/DialogTitle"
		android:text="@string/options"
		android:textColor="#fff"
		android:textSize="28sp"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:layout_toRightOf="@id/TitleImageView"
		android:layout_alignParentTop="true"
		android:layout_marginLeft="15dp"
        android:layout_marginTop="13dip"
            android:textStyle="bold"/>
	<EditText android:id="@+id/SensitivityNameBox"
		android:layout_width="260dip"
        android:layout_marginTop="10dip"
		android:layout_height="wrap_content"
		android:layout_below="@id/TitleImageView"
		android:layout_centerHorizontal="true"/>
	<SeekBar
		android:id="@+id/MaxSpeedSeekBar"
		android:layout_height="wrap_content"
		android:layout_width="260dip"
		android:layout_below="@id/SensitivityNameBox"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="10dp"/>
	<SeekBar
		android:id="@+id/BoostSeekBar"
		android:layout_height="wrap_content"
		android:layout_width="260dip"
		android:layout_below="@id/MaxSpeedSeekBar"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="10dp"/>
	<SeekBar
		android:id="@+id/RateSeekBar"
		android:layout_height="wrap_content"
		android:layout_width="260dip"
		android:layout_below="@+id/BoostSeekBar"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="10dp"/>
	<TextView
		android:textColor="#fff"
		android:gravity="center_vertical"
		android:id="@+id/NameTextView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="Name"
		android:textStyle="bold"
		android:layout_alignTop="@id/SensitivityNameBox"
		android:layout_alignBottom="@id/SensitivityNameBox"
		android:layout_toLeftOf="@id/SensitivityNameBox"
		android:layout_marginRight="10dp"/>
	<TextView
		android:textColor="#fff"
		android:gravity="center_vertical"
		android:id="@+id/MaxSpeedTextView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="Max. Speed"
		android:textStyle="bold"
		android:layout_alignTop="@+id/MaxSpeedSeekBar"
		android:layout_alignBottom="@+id/MaxSpeedSeekBar"
		android:layout_toLeftOf="@+id/MaxSpeedSeekBar"
		android:layout_marginRight="10dp"/>
	<TextView
		android:textColor="#fff"
		android:gravity="center_vertical"
		android:id="@+id/BoostTimeTextView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="Boost Time"
		android:textStyle="bold"
		android:layout_alignTop="@+id/BoostSeekBar"
		android:layout_alignBottom="@+id/BoostSeekBar"
		android:layout_toLeftOf="@+id/BoostSeekBar"
		android:layout_marginRight="10dp"/>
	<TextView
		android:textColor="#fff"
		android:gravity="center_vertical"
		android:id="@+id/RateTextView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="Rotation Rate"
		android:textStyle="bold"
		android:layout_alignTop="@+id/RateSeekBar"
		android:layout_alignBottom="@+id/RateSeekBar"
		android:layout_toLeftOf="@+id/RateSeekBar"
		android:layout_marginRight="10dp"/>
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignTop="@+id/MaxSpeedSeekBar"
		android:layout_alignBottom="@+id/MaxSpeedSeekBar"
		android:layout_toRightOf="@+id/MaxSpeedSeekBar"
		android:layout_marginLeft="10dp"
		android:text="0.5"
		android:textStyle="bold"
		android:id="@+id/MaxSpeedValueTextView"
		android:textColor="#fff"
		android:gravity="center_vertical"/>
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignTop="@+id/BoostSeekBar"
		android:layout_alignBottom="@+id/BoostSeekBar"
		android:layout_toRightOf="@+id/BoostSeekBar"
		android:layout_marginLeft="10dp"
		android:id="@+id/BoostValueTextView"
		android:text="0.5"
		android:textStyle="bold"
		android:textColor="#fff"
		android:gravity="center_vertical"/>
	<TextView
		android:textColor="#fff"
		android:id="@+id/RateValueTextView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="0.5"
		android:textStyle="bold"
		android:gravity="center_vertical"
		android:layout_alignTop="@+id/RateSeekBar"
		android:layout_alignBottom="@+id/RateSeekBar"
		android:layout_toRightOf="@+id/RateSeekBar"
		android:layout_marginLeft="10dp"/>
	<Button
		android:id="@+id/OptionsResetButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:background="@drawable/dialog_button"
		android:textColor="#fff"
        android:textSize="16sp"
        android:textStyle="bold"
		android:text="@string/Reset"
        android:paddingTop="5dip"
        android:paddingBottom="5dip"
        android:paddingLeft="30dip"
        android:paddingRight="30dip"
		android:layout_alignParentBottom="true"
		android:layout_marginBottom="10dip"
		android:layout_alignLeft="@id/NameTextView"/>
	<Button
		android:id="@+id/OptionsDoneButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:background="@drawable/dialog_button"
		android:textColor="#fff"
        android:textSize="16sp"
        android:textStyle="bold"
		android:text="@string/Done"
        android:paddingTop="5dip"
        android:paddingBottom="5dip"
        android:paddingLeft="30dip"
        android:paddingRight="30dip"
		android:layout_alignParentBottom="true"
		android:layout_marginBottom="10dip"
		android:layout_alignRight="@id/RateValueTextView"/>
</RelativeLayout>
